Get routes for user_id
