# routes/api.php
@@ -18,5 +18,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::post('route', [\App\Http\Controllers\RouteController::class, 'store']);
+Route::post('/route', [\App\Http\Controllers\RouteController::class, 'store']);
+Route::get('/route/{user_id}', [\App\Http\Controllers\RouteController::class, 'get']);
 
