# storage/api-docs/api-docs.json
@@ -128,6 +128,113 @@
                     }
                 }
             }
+        },
+        "/api/route/{user_id}": {
+            "get": {
+                "tags": [
+                    "Route"
+                ],
+                "summary": "Obtener todas las rutas de un usuario",
+                "operationId": "bb49cdd91e551da5ad3674e0b65455c9",
+                "parameters": [
+                    {
+                        "name": "user_id",
+                        "in": "path",
+                        "description": "ID del usuario para filtrar las rutas",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Listado de rutas del usuario",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "user_id": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "name": {
+                                                "type": "string",
+                                                "example": "Mi primera ruta"
+                                            },
+                                            "distance": {
+                                                "type": "string",
+                                                "example": "10km"
+                                            },
+                                            "duration": {
+                                                "type": "string",
+                                                "example": "1h 30m"
+                                            },
+                                            "path": {
+                                                "type": "array",
+                                                "items": {
+                                                    "properties": {
+                                                        "lat": {
+                                                            "type": "number",
+                                                            "format": "float",
+                                                            "example": 40.4639
+                                                        },
+                                                        "lng": {
+                                                            "type": "number",
+                                                            "format": "float",
+                                                            "example": -3.8095
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "average_speed": {
+                                                "type": "string",
+                                                "example": "10km/h"
+                                            },
+                                            "max_speed": {
+                                                "type": "string",
+                                                "example": "30km/h"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error al obtener las rutas",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "error": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Error retrieving routes"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "tags": [
